--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-composer-package-template",
+  "name": "wp-table-manager",
   "description": "A simple description.",
   "license": "MIT",
   "keywords": [],
