feat: add fluent MySQL CREATE TABLE builder with column, index, and foreign key definitions
- Implement `ColumnDefinition`, `IndexDefinition`, and `ForeignKeyDefinition` classes for
  schema building
- Add `CreateTableSchema` for fluent table creation, supporting columns, indexes,
  foreign keys, and options
- Support composite keys, morphs, soft deletes, timestamps, and various MySQL types

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -15,6 +15,9 @@ parameters:
     strictRules:
         noVariableVariables: false
 
+    ignoreErrors:
+        - identifier: empty.notAllowed
+
     treatPhpDocTypesAsCertain: false
 
 includes:
