--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "psr/log": "^1.1 || ^2.0 | ^3.0"
      },
     "require-dev": {
         "php-stubs/wordpress-tests-stubs": "^6.8",
