--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -7,6 +7,7 @@ parameters:
     tmpDir: /tmp/.phpstan
     paths:
         - src/
+        - tests/
 
     scanFiles:
         - %rootDir%/../../php-stubs/wordpress-tests-stubs/wordpress-tests-stubs.php
