--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -7,7 +7,8 @@ parameters:
     tmpDir: /tmp/.phpstan
     paths:
         - src/
-        - tests/
+        - tests/Unit
+        - tests/Integration
 
     scanFiles:
         - %rootDir%/../../php-stubs/wordpress-tests-stubs/wordpress-tests-stubs.php
