--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -7,6 +7,8 @@ parameters:
     tmpDir: /tmp/.phpstan
     paths:
         - src/
+        - tests/Unit
+        - tests/Integration
 
     scanFiles:
         - %rootDir%/../../php-stubs/wordpress-tests-stubs/wordpress-tests-stubs.php
@@ -17,6 +19,7 @@ parameters:
 
     ignoreErrors:
         - identifier: empty.notAllowed
+        - '#Parameter \#1 \$query of method wpdb\:\:prepare\(\) expects literal-string\, non-falsy-string given*#'
 
     treatPhpDocTypesAsCertain: false
 
