--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,39 +2,38 @@
 name: Release
 
 on:
-  workflow_dispatch: # Allows manual triggering of the workflow
-  # push:
-  #   branches:
-  #     - main
+  workflow_dispatch:
 
 jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
     permissions:
-      contents: write # To push commits and tags
-      issues: write # To comment on issues and PRs
-      pull-requests: write # To create releases
+      contents: write
+      issues: write
+      pull-requests: write
 
     steps:
+      - name: Generate a token
+        id: generate_token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # We need to fetch all history and tags for release-it to work correctly
           fetch-depth: 0
+          token: ${{ steps.generate_token.outputs.token }} # Use the app's token for checkout
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Or your preferred Node.js version
+          node-version: '20'
 
       - name: Install npm dependencies
         run: npm install
-
-      - name: Check for uncommitted changes
-        run: |
-          echo "Running git status to check for modified files..."
-          git status
 
       - name: Configure Git
         run: |
@@ -44,5 +43,4 @@ jobs:
       - name: Create Release
         run: npm run release -- --ci
         env:
-          # The GITHUB_TOKEN is automatically provided by GitHub Actions
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
