--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
 {
     "name": "wptechnix/wp-table-manager",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "A modern, fluent schema builder for creating, migrating, and managing custom WordPress database tables with a powerful, object-oriented API.",
     "type": "library",
     "license": "MIT",
-    "keywords": [],
+    "keywords": [
+      "wordpress",
+      "database",
+      "custom-tables",
+      "schema-builder",
+      "wpdb",
+      "migrations"
+    ],
     "authors": [
         {
             "name": "WPTechnix",
